Support log in and sign up in server
